First version of navigation of actual park
