# common/src/main/java/nl/rubium/efteling/common/location/entity/LocationCoordinates.java
@@ -1,0 +1,3 @@
+package nl.rubium.efteling.common.location.entity;
+
+public record LocationCoordinates(int x, int y) {}
