# rides/src/main/java/nl/rubium/efteling/rides/boundary/RideDeserializer.java
@@ -7,9 +7,9 @@ import com.fasterxml.jackson.databind.deser.std.StdDeserializer;
 import java.io.IOException;
 import java.time.Duration;
 import nl.rubium.efteling.common.location.entity.Location;
+import nl.rubium.efteling.common.location.entity.LocationCoordinates;
 import nl.rubium.efteling.rides.entity.Ride;
 import nl.rubium.efteling.rides.entity.RideStatus;
-import org.locationtech.jts.geom.Coordinate;
 
 public class RideDeserializer extends StdDeserializer<Location> {
 
@@ -25,11 +25,8 @@ public class RideDeserializer extends StdDeserializer<Location> {
     public Ride deserialize(JsonParser jp, DeserializationContext ctxt) throws IOException {
         JsonNode node = jp.getCodec().readTree(jp);
         String name = node.get("name").asText();
-        double lat = node.get("coordinates").findPath("lat").asDouble();
-        double lon = node.get("coordinates").findPath("long").asDouble();
-        ;
         int minimumAge = node.get("minimumAge").asInt();
-        ;
+
         float minimumLength = Double.valueOf(node.get("minimumLength").asDouble()).floatValue();
         Duration duration =
                 Duration.ofSeconds(
@@ -37,9 +34,18 @@ public class RideDeserializer extends StdDeserializer<Location> {
                                 + node.get("duration").findPath("seconds").asLong());
         int maxPersons = node.get("maxPersons").asInt();
 
-        var coordinate = new Coordinate(lat, lon);
+        var locationCoordinates =
+                new LocationCoordinates(
+                        node.get("location").findPath("x").asInt(),
+                        node.get("location").findPath("y").asInt());
 
         return new Ride(
-                RideStatus.OPEN, coordinate, name, minimumAge, minimumLength, duration, maxPersons);
+                RideStatus.OPEN,
+                name,
+                minimumAge,
+                minimumLength,
+                duration,
+                maxPersons,
+                locationCoordinates);
     }
 }
