# stands/src/main/java/nl/rubium/efteling/stands/boundary/StandDeserializer.java
@@ -5,18 +5,15 @@ import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.deser.std.StdDeserializer;
+import java.io.IOException;
+import java.util.Spliterator;
+import java.util.Spliterators;
+import java.util.stream.StreamSupport;
 import nl.rubium.efteling.common.location.entity.Location;
+import nl.rubium.efteling.common.location.entity.LocationCoordinates;
 import nl.rubium.efteling.stands.entity.Product;
 import nl.rubium.efteling.stands.entity.ProductType;
 import nl.rubium.efteling.stands.entity.Stand;
-import org.locationtech.jts.geom.Coordinate;
-
-import java.io.IOException;
-import java.util.List;
-import java.util.Spliterator;
-import java.util.Spliterators;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 public class StandDeserializer extends StdDeserializer<Location> {
 
@@ -34,20 +31,28 @@ public class StandDeserializer extends StdDeserializer<Location> {
 
         JsonNode node = jp.getCodec().readTree(jp);
         String name = node.get("name").asText();
-        double lat = node.get("coordinates").findPath("lat").asDouble();
-        double lon = node.get("coordinates").findPath("long").asDouble();
         var productsNode = node.path("products").elements();
 
-        var products = StreamSupport.stream(
-                Spliterators.spliteratorUnknownSize(productsNode, Spliterator.ORDERED), false)
-                .map(i -> new Product(
-                        i.get("name").asText(),
-                        Double.valueOf(i.get("price").asDouble()).floatValue(),
-                        ProductType.valueOf(i.get("type").asText().toUpperCase())))
-                .toList();
+        var products =
+                StreamSupport.stream(
+                                Spliterators.spliteratorUnknownSize(
+                                        productsNode, Spliterator.ORDERED),
+                                false)
+                        .map(
+                                i ->
+                                        new Product(
+                                                i.get("name").asText(),
+                                                Double.valueOf(i.get("price").asDouble())
+                                                        .floatValue(),
+                                                ProductType.valueOf(
+                                                        i.get("type").asText().toUpperCase())))
+                        .toList();
 
-        var coordinate = new Coordinate(lat, lon);
+        var locationCoordinates =
+                new LocationCoordinates(
+                        node.get("location").findPath("x").asInt(),
+                        node.get("location").findPath("y").asInt());
 
-        return new Stand(name, coordinate, products);
+        return new Stand(name, products, locationCoordinates);
     }
 }
