# stands/src/main/java/nl/rubium/efteling/stands/entity/Stand.java
@@ -1,11 +1,12 @@
 package nl.rubium.efteling.stands.entity;
 
+import java.math.BigDecimal;
 import java.util.List;
 import lombok.Getter;
 import nl.rubium.efteling.common.location.entity.Location;
+import nl.rubium.efteling.common.location.entity.LocationCoordinates;
 import nl.rubium.efteling.common.location.entity.LocationType;
-import org.locationtech.jts.geom.Coordinate;
-import org.openapitools.client.model.CoordinatesDto;
+import org.openapitools.client.model.GridLocationDto;
 import org.openapitools.client.model.StandDto;
 
 @Getter
@@ -13,8 +14,8 @@ public class Stand extends Location {
     private final List<Product> meals;
     private final List<Product> drinks;
 
-    public Stand(String name, Coordinate coordinate, List<Product> products) {
-        super(name, coordinate, LocationType.STAND);
+    public Stand(String name, List<Product> products, LocationCoordinates coordinates) {
+        super(name, LocationType.STAND, coordinates);
         this.meals = products.stream().filter(Product::isMeal).toList();
         this.drinks = products.stream().filter(Product::isDrink).toList();
     }
@@ -23,14 +24,14 @@ public class Stand extends Location {
         return StandDto.builder()
                 .id(this.getId())
                 .name(this.getName())
-                .coordinates(
-                        CoordinatesDto.builder()
-                                .lat(this.getCoordinate().getX())
-                                .lon(this.getCoordinate().getY())
-                                .build())
                 .locationType(this.getLocationType().name())
                 .meals(this.getMeals().stream().map(Product::getName).toList())
                 .drinks(this.getDrinks().stream().map(Product::getName).toList())
+                .location(
+                        GridLocationDto.builder()
+                                .x(BigDecimal.valueOf(getLocationCoordinates().x()))
+                                .y(BigDecimal.valueOf(getLocationCoordinates().y()))
+                                .build())
                 .build();
     }
 }
